# ble-wifi-connector

./: .gitignore  README.md  ble-wifi-connector.service  check_service_status.sh  install_systemd.sh  pyproject.toml  register_systemd.sh  uninstall_systemd.sh  unregister_systemd.sh
ble_wifi_connector/: __main__.py  ble_advertiser.py  utils.py  wifi_manager.py
ble_wifi_connector/common/: models.py
